--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,24 @@
     background-color: black;
     padding: 0 5px 5px 5px;
     box-shadow: 5px 5px 5px rgb(100, 100, 100);
+    border-radius: 0 0 5px 5px;
+    padding: 10px;
 }
 .screen{
     width: 260px;
-    padding:0px 10px;
+    padding:0px 15px;
     font-size: 16px;
     text-align: right;
     color: #fff;
     background-color: black;
     box-shadow: 5px 6px 5px rgb(100, 100, 100);
+    border-radius: 5px 5px 0 0;
 }
 .screen p {
     background-color: green;
     padding: 10px;
+    font-weight: bold;
+    border-radius: 5px;
 }
 .btn{
     min-width: 50px;
@@ -31,12 +36,13 @@
     border: 0;
     background-color: #fff;
     font-size: 16px;
+    border-radius: 5px;
 }
 .btn:hover{
    background-color: antiquewhite;
 }
 .zero{
-    grid-area: 4/1/4/3;
+    grid-area: 4/1/4/4;
 }
 .clear{
     grid-area: 1/4/1/6;
