--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ html{
     box-sizing: inherit;
     font-family: 'Roboto', sans-serif;
 }
+a{
+    margin-top: .25rem;
+    font-size: .75rem;
+}
 body{
     text-align: center;
     padding-top: 3rem;
